@@ -18,6 +18,9 @@
   `eventual_process_of_zonefile`, and `serve_with_processor` to `Dns_server`
 * Rename `Query.query_answer` to `Query.answer`
 * Add `Query.response_of_answer` and `Query.answer_of_response`
+* Move `Dns_resolver.build_query` to `Query.create`
+* Rename `Query.answer_query` to `Query.answer`
+* Expose `Dns_resolver.get_id` for generated IDs to pass to `Query.create`
 
 0.6.2 (2012-02-13):
 * Fix Lwt compilation after switch to `Dns.Names.Map` instead of `Hashtbl`.
